--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,6 +98,54 @@ module = "tests.*"
 ignore_errors = true
 module = "docs.*"
 
+[tool.pylint.MAIN]
+extension-pkg-allow-list = "pydantic"
+fail-on = [
+  "I",
+]
+ignore = []
+init-hook = """\
+    from pathlib import Path; \
+    import sys; \
+
+    from pylint.config import find_default_config_files; \
+
+    sys.path.append( \
+        str(Path(next(find_default_config_files())).parent.joinpath('pylint/plugins'))
+    ) \
+    """
+jobs = 2
+load-plugins = [
+  "pylint.extensions.code_style",
+  "pylint.extensions.typing",
+  "pylint_strict_informational",
+]
+persistent = false
+py-version = "3.9"
+score = false
+
+[tool.pylint.FORMAT]
+expected-line-ending-format = "LF"
+
+[tool.pylint."MESSAGES CONTROL"]
+disable = [
+  "duplicate-code",
+  "format",
+  "locally-disabled",
+  "too-few-public-methods",
+  "unused-argument",
+]
+enable = [
+  "useless-suppression",
+  "use-symbolic-message-instead",
+]
+
+[tool.pylint.CODE_STYLE]
+max-line-length-suggestions = 88
+
+[tool.pylint.TYPING]
+runtime-typing = false
+
 [tool.pytest.ini_options]
 addopts = "-v -Wdefault --cov=aioopenexchangerates --cov-report=term-missing:skip-covered"
 pythonpath = ["src"]
