--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["github>browniebroke/renovate-configs:python"]
+  "extends": ["github>browniebroke/renovate-configs:python"],
+  "automergeType": "branch"
 }
