--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ pylint-strict-informational = "^0.1"
 pytest = "^7.0"
 pytest-aiohttp = "^1.0.4"
 pytest-cov = "^3.0"
+python-semantic-release = "^7.30.2"
 pyupgrade = "^2.29"
 yarl = "^1.7.2"
 
