--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,15 @@ exclude_lines = [
 ]
 
 [tool.isort]
-known_first_party = ["aioopenexchangerates", "tests"]
+combine_as_imports = true
+force_sort_within_sections = true
+forced_separate = [
+  "tests",
+]
+known_first_party = [
+  "aioopenexchangerates",
+  "tests",
+]
 profile = "black"
 
 [tool.mypy]
