--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,14 +16,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.0.2
+      - name: Install poetry
+        run: pipx install poetry
       - uses: actions/setup-python@v4.1.0
         with:
           python-version: "3.9"
-      - uses: snok/install-poetry@v1.3.1
+          cache: "pip"
+          cache-dependency-path: "poetry.lock"
       - name: Install Dependencies
-        run: poetry install
+        run: |
+          poetry export --dev --without-hashes -f requirements.txt -o requirements.txt
+          echo "." >> requirements.txt
+          pip install -r requirements.txt
       - name: Run all pre-commit hooks
-        run: poetry run pre-commit run --all-files
+        run: pre-commit run --all-files
 
   # Make sure commit messages follow the conventional commits convention:
   # https://www.conventionalcommits.org
@@ -50,15 +56,21 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3.0.2
+      - name: Install poetry
+        run: pipx install poetry
       - name: Set up Python
         uses: actions/setup-python@v4.1.0
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: snok/install-poetry@v1.3.1
+          cache: "pip"
+          cache-dependency-path: "poetry.lock"
       - name: Install Dependencies
-        run: poetry install
+        run: |
+          poetry export --dev --without-hashes -f requirements.txt -o requirements.txt
+          echo "." >> requirements.txt
+          pip install -r requirements.txt
       - name: Test with Pytest
-        run: poetry run pytest --cov-report=xml
+        run: pytest --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3.1.0
         with:
