--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,127 +7,8 @@ on:
       - "renovate/**"
   pull_request:
 
-concurrency:
-  group: ${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
-
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.0.2
-      - name: Set up Python
-        id: setup-python
-        uses: actions/setup-python@v4.1.0
-        with:
-          python-version: "3.9"
-      - name: Load cached Poetry installation
-        uses: actions/cache@v3.0.5
-        with:
-          path: ~/.local # the path depends on the OS
-          key: dotlocal-${{ runner.os }}-${{ hashFiles('.github/workflows/ci.yml') }}
-      - name: Install Poetry
-        uses: snok/install-poetry@v1.3.1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      - name: Load cached venv
-        id: cached-poetry-dependencies
-        uses: actions/cache@v3.0.5
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('.github/workflows/ci.yml') }}
-      - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root
-      - name: Install library
-        run: poetry install --no-interaction
-      - name: Run all pre-commit hooks
-        run: |
-          source $VENV
-          pre-commit run --all-files
-
-  # Make sure commit messages follow the conventional commits convention:
-  # https://www.conventionalcommits.org
-  commitlint:
-    name: Lint Commit Messages
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.0.2
-        with:
-          fetch-depth: 0
-      - uses: wagoid/commitlint-github-action@v5.0.2
-
-  test:
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version:
-          - "3.9"
-          - "3.10"
-        os:
-          - ubuntu-latest
-          - macOS-latest
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v3.0.2
-      - name: Set up Python
-        id: setup-python
-        uses: actions/setup-python@v4.1.0
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Load cached Poetry installation
-        uses: actions/cache@v3.0.5
-        with:
-          path: ~/.local # the path depends on the OS
-          key: dotlocal-${{ runner.os }}-${{ hashFiles('.github/workflows/ci.yml') }}
-      - name: Install Poetry
-        uses: snok/install-poetry@v1.3.1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-      - name: Load cached venv
-        id: cached-poetry-dependencies
-        uses: actions/cache@v3.0.5
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('.github/workflows/ci.yml') }}
-      - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root
-      - name: Install library
-        run: poetry install --no-interaction
-      - name: Test with Pytest
-        run: |
-          source $VENV
-          pytest --cov-report=xml
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3.1.0
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-
-  release:
-    runs-on: ubuntu-latest
-    environment: release
-    if: github.ref == 'refs/heads/main'
-    needs:
-      - test
-      - lint
-      - commitlint
-
-    steps:
-      - uses: actions/checkout@v3.0.2
-        with:
-          fetch-depth: 0
-
-      # Run semantic release:
-      # - Update CHANGELOG.md
-      # - Update version in code
-      # - Create git tag
-      # - Create GitHub release
-      # - Publish to PyPI
-      - name: Python Semantic Release
-        uses: relekang/python-semantic-release@v7.31.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          pypi_token: ${{ secrets.PYPI_TOKEN }}
+  psr-ci:
+    uses: MartinHjelmare/github-actions-workflows/.github/workflows/psr-ci.yml@main
+    secrets:
+      PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
