feat: support currencies endpoint (#25)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,6 +53,9 @@ repos:
     rev: v2.1.0
     hooks:
       - id: codespell
+        args:
+          - --skip="./.*,*.csv,*.json"
+        exclude: ^tests/fixtures/
   - repo: https://github.com/PyCQA/flake8
     rev: 5.0.4
     hooks:
