--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,7 +167,7 @@ max-line-length-suggestions = 88
 runtime-typing = false
 
 [tool.pytest.ini_options]
-addopts = "-v -Wdefault --cov=aioopenexchangerates --cov-report=term-missing:skip-covered"
+addopts = "-Wdefault --cov=aioopenexchangerates --cov-report=term-missing:skip-covered"
 asyncio_mode = "auto"
 pythonpath = ["src"]
 
