--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,23 +27,11 @@ version = "0.4.0"
 "Changelog" = "https://github.com/MartinHjelmare/aioopenexchangerates/blob/main/CHANGELOG.md"
 
 [tool.poetry.dependencies]
-aiohttp = "^3.8"
+aiohttp = "^3.8.4"
 pydantic = "^1.9"
 python = "^3.9"
 
-# Documentation Dependencies
-Sphinx = {version = "^5.0", optional = true}
-myst-parser = {version = "^0.18", optional = true}
-sphinx-rtd-theme = {version = "^1.0", optional = true}
-
-[tool.poetry.extras]
-docs = [
-  "myst-parser",
-  "sphinx",
-  "sphinx-rtd-theme",
-]
-
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 aioresponses = "^0.7.3"
 bandit = "^1.7"
 black = "^22.1"
@@ -60,6 +48,14 @@ pytest-cov = "^4.0"
 python-semantic-release = "^7.30.2"
 pyupgrade = "^3.0"
 yarl = "^1.7.2"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+myst-parser = "^0.18"
+sphinx = "^5.0"
+sphinx-rtd-theme = "^1.0"
 
 [tool.coverage.run]
 branch = true
